avoid showing invisible text

--- a/public/_assets/css/main.css
+++ b/public/_assets/css/main.css
@@ -1,4 +1,5 @@
 @font-face {
+    font-display: swap;
     font-family: 'MitMarionFont';
     src: url("/_assets/css/fonts/file.woff2") format("woff2"),
     url("/_assets/css/fonts/file.woff") format("woff"),
